--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     android:background="#ffffff">
 
+<!-- android:layout_width="wrap_content"
+        android:layout_height="wrap_content" -->
     <ImageView
     android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        
+        android:layout_width="290dp"
+        android:layout_height="290dp"
         android:src="@drawable/ic_launcher_foreground"
         android:scaleType="centerCrop"
         android:layout_centerInParent="true" />
